# HW_31

./: README.md  data_creater.py  db.sqlite3  pyproject.toml
HW_27/: settings.py  urls.py
ads/: admin.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
ads/migrations/: 0001_initial.py  0002_categories.py  0002_initial.py  0003_alter_ads_price.py  0003_selection.py  0004_ad_category_location_user_delete_ads_and_more.py  0004_alter_ad_description_alter_ad_name_alter_ad_price_and_more.py  0005_remove_user_location_id_user_location_id.py  0006_remove_user_location_id_alter_ad_author_id_and_more.py
ads/serializers/: ad.py  selection.py
ads/urls/: ad.py  cat.py  selection.py
ads/views/: ad.py  cat.py  selection.py
authentication/: urls.py
datasets/: ad.json  data_creater.py  data_creator.py
desk/: settings.py  urls.py
tests/: factories.py  fixtures.py
tests/ads/: ad_create_test.py  ad_detail_test.py  ads_get_list_test.py
tests/selections/: selection_create_test.py
users/: models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_role.py  0003_alter_user_age_alter_user_email.py  0003_rename_location_id_user_locations.py  0004_user_password.py  0005_alter_user_username.py  0006_alter_location_options_alter_user_options.py
